node-main/deps/v8/test/message/fail/var-prior-conflict.out
# Copyright 2022 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

*%(basename)s:7: SyntaxError: Identifier 'a' has already been declared
    var a;
        ^
SyntaxError: Identifier 'a' has already been declared

